# push_swap

./: CMakeLists.txt  Makefile  checker  checker.h  data_func.c  doing_moves.c  main.c  push_swap  push_swap.c  result.txt  swap_commands.h  work_with_commands.c
checker/: checker.h  data_func.c  main.c  output_stacks.c  reverse_rotate_commands_checker.c  swap_commands.c  swap_commands.h  work_with_commands.c
checker_files/: checker.h  data_func.c  find_command.c  main.c  output_stacks.c  push_commands_checker.c  rotate_commands_checker.c  swap_commands.c  work_with_commands.c
commands/: commands.c  commands.h
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c  gnl_systemic.h  gnl_update.c
libft/: Makefile  ft_atoi.c  ft_lstlast.c  ft_putchar.c  ft_putstr.c  ft_strlen.c  libft.h
ps/: CMakeLists.txt  Makefile
ps/libft/: ft_substr.c
ps/push_swap/: data_func.c  main.c  push_swap.c  reverse_rotate_commands_ps.c
ps/push_swap_files/: count_ways.c  doing_moves.c  main.c  min_way_and_sort_three.c  push_swap.c  push_swap.h
push_swap_files/: data_func.c  main.c  push_commands_ps.c  rotate_commands_ps.c  swap_commands_ps.c  swap_commands_ps.h
